--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@3rdweb/hooks": "^1.9.2",
     "next": "12.1.5",
     "react": "18.1.0",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.4.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
