--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@3rdweb/hooks": "^1.9.2",
+    "@3rdweb/sdk": "^1.42.1",
+    "dotenv": "^16.0.1",
+    "ethers": "^5.6.9",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-chartjs-2": "^4.2.0",
