--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@3rdweb/hooks": "^1.9.2",
     "@3rdweb/sdk": "^1.42.1",
+    "chart.js": "^3.9.1",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
     "next": "12.1.5",
@@ -18,6 +19,7 @@
     "react-chartjs-2": "^4.2.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
+    "react-modal": "^3.15.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
